<resources>
    <string name="app_name">Apexing-Android</string>
    <string name="app">APEXING.</string>
    <string name="app_url">market://details?id=jyotti.apexing.apexing_android</string>
    <string name="app_name_installed">에이펙싱</string>

    <!--    Common-->
    <string name="pc">PC</string>
    <string name="xbox">XBOX</string>
    <string name="ps4">PlayStation</string>
    <string name="no">아니요</string>
    <string name="yes">좋아요!</string>
    <string name="notice">알림</string>
    <string name="battle_royal">배틀로얄</string>
    <string name="arena">아레나</string>
    <string name="rank">랭크</string>
    <string name="damage">대미지</string>
    <string name="confirm">알겠어요.</string>
    <string name="kill">킬</string>
    <string name="kd">K/D</string>
    <string name="games_played">플레이한 게임</string>
    <string name="server_error">서버 오류입니다. 다시 시도해주세요.</string>
    <string name="retry">재시도</string>
    <string name="web_help">https://velog.io/@gn000123/%EC%97%90%EC%9D%B4%ED%8E%99%EC%8B%B1-PC-%EC%9C%A0%EC%A0%80-%EC%95%84%EC%9D%B4%EB%94%94-%EB%93%B1%EB%A1%9D</string>
    <string name="web_recording">https://velog.io/@gn000123/%EC%97%90%EC%9D%B4%ED%8E%99%EC%8B%B1-%ED%82%AC-%EB%B0%8F-%EB%8C%80%EB%AF%B8%EC%A7%80-%EA%B8%B0%EB%A1%9D-%EB%B0%A9%EB%B2%95</string>
    <string name="web_refresh">https://velog.io/@gn000123/%EC%97%90%EC%9D%B4%ED%8E%99%EC%8B%B1-%EA%B0%B1%EC%8B%A0%EC%9D%B4-%EC%A0%9C%ED%95%9C%EC%A0%81%EC%9D%B8-%EC%9D%B4%EC%9C%A0</string>
    <string name="rating_suggestion">앱은 잘 사용하고 계신가요?\n에이펙싱에 대한 리뷰를 남겨주세요!\n개발자에게 큰 힘이 됩니다!</string>
    <string name="close">닫기</string>

    <!--    SplashActivity-->
    <string name="new_version">새로운 버전이 있습니다.\n원활한 서비스 이용을 위해\n업데이트가 필요합니다.</string>
    <string name="play_store">플레이스토어 이동</string>
    <string name="not_connected_to_internet">인터넷에 연결되어 있지 않습니다.\n연결 상태를 확인해주세요.</string>
    <string name="quit">종료</string>

    <!--    AccountActivity-->
    <string name="set_id">서비스 이용을 위해\n플랫폼 ID를 등록해주세요.</string>
    <string name="type_id">ID 입력</string>
    <string name="type_at_least_one">한 글자 이상 입력하여야 합니다.</string>
    <string name="id">ID</string>
    <string name="choice_platform">플랫폼 선택</string>
    <string name="origin_id">오리진 ID 를 입력해주세요.</string>
    <string name="if_you_are_steam_user">스팀 유저는 스팀 계정에 연동된 \n오리진 계정의 닉네임을 입력해주세요.</string>
    <string name="please_set_id">ID를 입력해주세요.</string>
    <string name="please_set_platform">플랫폼을 선택해주세요.</string>
    <string name="please_set_all">ID 입력과 플랫폼 선택이 필요합니다.</string>
    <string name="please_retry">일시적인 오류입니다. 다시 시도해주세요.</string>
    <string name="account_error">ID를 확인하고 다시 시도해주세요.</string>
    <string name="not_allowed_id">ID에 \'.\', \'#\', \'[\', \']\' 는 포함될 수 없습니다.\n도움말 페이지를 확인해 주세요.</string>
    <string name="help">도움말 보기</string>

    <!--    HomeActivity-->
    <string name="main">메인</string>
    <string name="statistics">통계</string>
    <string name="enroll">등록</string>
    <string name="back_button_double_tap">뒤로 가기 버튼을 빠르게 두 번 탭하면 종료됩니다.</string>

    <!--    MainFragment-->
    <string name="battle_royale_normal">배틀로얄 - 일반</string>
    <string name="battle_royale_rank">배틀로얄 - 랭크</string>
    <string name="arena_normal">아레나 - 일반</string>
    <string name="arena_rank">아레나 - 랭크</string>
    <string name="map_time_limit">%s 까지</string>
    <string name="korean_nickname">한글 닉네임</string>
    <string name="level">Lv.%d</string>
    <string name="tab_to_detail">탭하여 자세히 알아보기</string>
    <string name="record_damage">전체 가한 대미지</string>
    <string name="record_kill">전체 킬</string>
    <string name="record_kd">매치 당 킬</string>
    <string name="record_games">플레이한 게임</string>
    <string name="help_email">도움이 필요하시다면 gn0001231@gmail.com 로 연락주세요!</string>

    <!--    StatisticsFragment-->
    <string name="most_legend">모스트 레전드</string>
    <string name="basic_statistics">기본 통계</string>
    <string name="battle_ability">전투 능력</string>
    <string name="every_match">최근 %d전 기준</string>
    <string name="kill_with_string">%s 킬</string>
    <string name="damage_with_string">%s 대미지</string>
    <string name="recent_games_statistics">최근 20전 킬 / 딜</string>
    <string name="statistics_made_by_source">모든 통계는 기록된 게임을 바탕으로 산출됩니다.</string>
    <string name="kill_avg_all">전체 평균 킬</string>
    <string name="damage_avg_all">전체 평균 대미지</string>
    <string name="kill_avg_recent">최근 평균 킬</string>
    <string name="damage_avg_recent">최근 평균 대미지</string>
    <string name="change_id">ID 변경</string>
    <string name="match_refresh">전적 갱신</string>
    <string name="survival_duration">생존 시간</string>
    <string name="bar_chart_description">막대 위 숫자는 가한 대미지, 아래의 숫자는 킬을 나타냅니다.</string>
    <string name="kill_damage_description">킬과 대미지가 표시되도록 하는 방법</string>
    <string name="refreshed_at">%s 갱신됨</string>
    <string name="how_to_record">킬과 대미지를 기록하는 방법</string>
    <string name="force_refreshing">전적이 추가로 기록되지 않았나요?</string>
    <string name="store">스토어</string>
    <string name="recent_by_20_matches">최근 20전 기준</string>
    <string name="all_user">전체 유저</string>
    <string name="current_index">현재 순번</string>
    <string name="my_index">나의 순번</string>
    <string name="refresh_desc">한 시간 당 45명의 전적이 갱신됩니다.</string>
    <string name="no_match">기록된 매치가 없습니다.\n게임을 플레이 해주세요.\n현재 순번이 유저님의 순번을 지나면\n매치가 표시됩니다.</string>
    <string name="please_set_tracker_or_play_hard">킬과 대미지가 모두 0인 매치입니다.\n트래커를 설정하거나, 민첩하셔야 합니다.</string>
    <string name="invalidated_match_data">유효하지 않은 데이터가 기록된 매치입니다.\n통계에는 반영되지 않습니다.</string>
    <string name="legend_kill_avg">레전드 평균 킬</string>
    <string name="legend_damage_avg">레전드 평균 대미지</string>
    <string name="touch_portrait">초상화를 터치하여 레전드별 통계를 볼 수 있습니다.</string>
    <string name="kill_catch">킬 캐치</string>
    <string name="dealing">딜링</string>
    <string name="survival_ability">생존 능력</string>
    <string name="positiveness">적극성</string>
    <string name="survival_time">%d 분 %d 초 생존</string>

    <!--    StoreFragment-->
    <string name="touch_to_detail">아이템 터치하여 이미지 확대</string>
    <string name="time_notice_refresh_matches">시간 후 나의 전적이 업데이트 됩니다.</string>

    <!--    ApexingException-->
    <string name="exception_network">네트워크 오류입니다.\n연결 상태를 확인해주세요.</string>
    <string name="exception_player_not_found">올바른 ID를 입력해주세요.</string>
    <string name="exception_unknown">알 수 없는 오류입니다.\n잠시 후 다시 시도해주세요.</string>
</resources>