<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:background="@color/main" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="80dp">

                            <ImageView
                                android:id="@+id/iv_legend"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/bloodhound" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_legend"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:textColor="@color/black"
                                android:textSize="21sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tv_mode"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:gravity="center_horizontal|bottom"
                                    android:textColor="@color/black"
                                    android:textSize="17sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tv_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:gravity="center_horizontal|top"
                                    android:textColor="@color/gray"
                                    android:textSize="15sp" />

                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_kill"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_horizontal|bottom"
                                android:textColor="@color/black"
                                android:textSize="21sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_horizontal|top"
                                android:text="@string/kill"
                                android:textColor="@color/gray"
                                android:textSize="15sp" />

                        </LinearLayout>
                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="10dp"
                            android:background="@color/light_gray"/>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_damage"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_horizontal|bottom"
                                android:textColor="@color/black"
                                android:textSize="21sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_horizontal|top"
                                android:text="@string/damage"
                                android:textColor="@color/gray"
                                android:textSize="15sp" />

                        </LinearLayout>
                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="10dp"
                            android:background="@color/light_gray"/>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_survival_duration"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_horizontal|bottom"
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_horizontal|top"
                                android:text="@string/survival_duration"
                                android:textColor="@color/gray"
                                android:textSize="15sp" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</layout>